no need of parameter

--- a/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/custom-public-button.hbs
+++ b/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/custom-public-button.hbs
@@ -1,1 +1,1 @@
-<button class="btn custom-topic-button" title="{{customButtonTitle}}" {{action "clickButton" b}}>{{customButtonLabel}}</button>
+<button class="btn custom-topic-button" title="{{customButtonTitle}}" {{action "clickButton"}}>{{customButtonLabel}}</button>
