FIX: Update for new connector class API

--- a/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/custom-public-button.hbs
+++ b/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/custom-public-button.hbs
@@ -1,1 +1,4 @@
-<button class="btn custom-topic-button" title="{{customButtonTitle}}" {{action "clickButton"}}>{{customButtonLabel}}</button>
+<button
+  class="btn custom-topic-button"
+  title={{siteSettings.custom_topic_button_title}}
+  {{action "clickButton"}}>{{siteSettings.custom_topic_button_label}}</button>
